--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "chrome",
             "request": "launch",
@@ -13,6 +14,12 @@
         {
             "command": "npm start",
             "name": "Run npm start",
+            "request": "launch",
+            "type": "node-terminal"
+        }
+        {
+            "command": "npm test",
+            "name": "Run npm test`",
             "request": "launch",
             "type": "node-terminal"
         }
